// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a function 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "props": Object {
          "environmentVariables": Object {
            "ENV_VAR1": "true",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;

exports[`invoke function 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "props": Object {
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;

exports[`invoke function with environment variables 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "props": Object {
          "environmentVariables": Object {
            "PIG_LATIN": "true",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;
